Fix overflow issue in chart component

--- a/src/pages/pools/Pool/chart.css
+++ b/src/pages/pools/Pool/chart.css
@@ -22,7 +22,6 @@
   justify-content: flex-start;
   align-items: flex-start;
   flex-grow: 1;
-  overflow: hidden;
 }
 
 .pool-chart .uik-card {
